fixed jumbotron text color and spacing

--- a/basic_front_end_dev_projects/portfolio_page/style.css
+++ b/basic_front_end_dev_projects/portfolio_page/style.css
@@ -54,8 +54,7 @@ html, body {
   background-repeat: no-repeat;
 }
 
-.section .row {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  border-bottom: 1px solid #dbdbdb;
+.jumbotron h3, p {
+  color: #fff;
+  text-align: right;
 }
